samples/_failures_safe/1761334637_11e8b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_797fabc9.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_797fabc9.c:128:9: error: expected declaration or statement at end of input
  128 |         printf("No entries found for level %s\n", level);
      |         ^~~~~~
./samples/SAFE/__tmp_797fabc9.c:128:9: error: expected declaration or statement at end of input
